test/parse/assert/bad-assertreturn-too-few.txt
;;; TOOL: wast2json
;;; ERROR: 1
(module
  (func $foo (param i32) (result i32) 
    local.get 0)
  (export "foo" (func $foo)))
(assert_return (invoke "foo") (i32.const 0))
(;; STDERR ;;;
out/test/parse/assert/bad-assertreturn-too-few.txt:7:17: error: too few parameters to function. got 0, expected 1
(assert_return (invoke "foo") (i32.const 0))
                ^^^^^^
;;; STDERR ;;)
